[package]
name = "rustweather"
version = "0.1.0"
authors = ["retrace <retracicle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }

